# backend/src/routes/auth.js
@@ -2,6 +2,7 @@ const router = require("express").Router();
 const authController = require("../controller/auth");
 
 router.post("/login", authController.login);
+router.post("/admin/login", authController.loginAdmin);
 router.post("/register", authController.register);
 router.put('/forgot-password', authController.forgotPassword );
 // get friends
