# backend/swagger_output.json
@@ -25,7 +25,62 @@
     "application/json"
   ],
   "paths": {
+    "/api/cloudinary-upload": {
+      "post": {
+        "tags": [
+          "Api"
+        ],
+        "description": "Endpoint for users.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
     "/api/auth/login": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "Endpoint for login, logout, forget password.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not found "
+          },
+          "500": {
+            "description": "Error Internal Server"
+          }
+        }
+      }
+    },
+    "/api/auth/admin/login": {
       "post": {
         "tags": [
           "Auth"
@@ -103,6 +158,49 @@
         }
       }
     },
+    "/api/auth/forgot-password": {
+      "put": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "Endpoint forgot password and then receive a random password in email .",
+        "parameters": [
+          {
+            "name": "reset-password",
+            "in": "body",
+            "schema": {
+              "required": [
+                "email"
+              ],
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "maxLength": 250,
+                  "example": "thang@gmail.com"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not found "
+          },
+          "500": {
+            "description": "Error Internal Server"
+          }
+        }
+      }
+    },
     "/api/users/": {
       "put": {
         "tags": [
@@ -127,7 +225,11 @@
         ],
         "description": "Endpoint for users.",
         "parameters": [],
-        "responses": {},
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
         "security": [
           {
             "Bearer": []
@@ -159,9 +261,33 @@
             "Bearer": []
           }
         ]
+      },
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Endpoint for users.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       }
     },
-    "/api/users/friends/": {
+    "/api/users/me": {
       "get": {
         "tags": [
           "Users"
@@ -180,7 +306,85 @@
         ]
       }
     },
+    "/api/users/friends/{username}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Endpoint for users.",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/api/users/{username}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Endpoint for users.",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
     "/api/users/{id}/follow": {
+      "put": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Endpoint for users.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/api/users/{id}/report": {
       "put": {
         "tags": [
           "Users"
@@ -419,6 +623,32 @@
         ]
       }
     },
+    "/api/posts/{id}/report": {
+      "put": {
+        "tags": [
+          "Posts"
+        ],
+        "description": "Endpoint for posts.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
     "/api/comments/": {
       "post": {
         "tags": [
@@ -443,8 +673,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Created"
           }
         },
         "security": [
@@ -454,13 +684,25 @@
         ]
       }
     },
-    "/api/comments/posts/": {
+    "/api/comments/posts/{postId}": {
       "get": {
         "tags": [
           "Comments"
         ],
         "description": "Endpoint for comments.",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "postId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -668,6 +910,9 @@
                 },
                 "text": {
                   "example": "any"
+                },
+                "fileUrl": {
+                  "example": "any"
                 }
               }
             }
@@ -676,6 +921,174 @@
         "responses": {
           "201": {
             "description": "Created"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/api/admin/dashboard/": {
+      "get": {
+        "tags": [
+          "Admin"
+        ],
+        "description": "Endpoint for messages.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/api/admin/users/": {
+      "get": {
+        "tags": [
+          "Admin"
+        ],
+        "description": "Endpoint for messages.",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "textSearch",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "direction",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/api/admin/posts/": {
+      "get": {
+        "tags": [
+          "Admin"
+        ],
+        "description": "Endpoint for messages.",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "direction",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/api/admin/block-user/": {
+      "patch": {
+        "tags": [
+          "Admin"
+        ],
+        "description": "Endpoint for messages.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
+    "/api/admin/block-posts/": {
+      "patch": {
+        "tags": [
+          "Admin"
+        ],
+        "description": "Endpoint for messages.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "postId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         },
         "security": [
